# didactic-lamp

./: CMakeLists.txt  README.md  SOURCES.md  build.txt  build2.txt  build3.txt  build_error.txt  cmake_output.txt  compile_debug.txt  visualize.py
src/: agents.h  evolution.h  main.cpp  metrics.h  noise.h  types.h  world.h
